[project]
name = "pntos-virtual"
version = "0.1.0"
description = "A meta package for pntOS that contains the components of pntOS."
authors = [
    { name = "IS4S", email = "pntos@is4s.com" }
]
dependencies = [
]
readme = "README.md"
requires-python = ">= 3.11"

[tool.rye]
virtual = true
managed = true
dev-dependencies = [
    "pytest>=8.2.0",
    "sphinx>=7.3.7",
    "ipython>=8.24.0",
    "ruff>=0.4.5",
    "mypy>=1.10.0",
    "pip>=24.0",
]

[tool.rye.workspace]
members = ["pntos-*"]

[tool.ruff.lint]
extend-select = ["I"]
