[project]
name = "pntos-python"
version = "2.1.0-0.dev0"
description = "A meta package for pntOS that contains the components of pntOS."
readme = "README.md"
license = 'Apache-2.0'
license-files = [ 'LICENSE' ]

authors = [ { name = "IS4S", email = "pntos@is4s.com" } ]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "analysis-lcm>=0.1.3",
    "analysis-ros>=0.1.1",
    "matplotlib",
    "pntos-api",
    "pntos-cobra",
    "pntos-python-datasets-lcm==0.1.0",
    "pntos-python-datasets-ros==0.1.0",
]

[dependency-groups]
dev = [
    "gitpython==3.1.44",
    "ipython>=8.24",
    "libclang>=18.1.1",
    "mypy==1.18.2",
    "myst-parser>=4",
    "pip>=24",
    "pntos-python-docs-data",
    "pyproject-fmt>=2.7",
    "pytest>=8.2",
    "pytest-cov>=6",
    "ruff==0.13.2",
    "setuptools>=82.0.1",
    "sphinx>=7.3.7",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.ruff]
format.quote-style = "single"
lint.select = [
    "ANN",
    "B",
    "BLE",
    "C4",
    "COM",
    "D",
    "DTZ",
    "E",
    "F",
    "FA",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "INT",
    "LOG",
    "NPY",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PTH",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLOT",
    "T10",
    "TID",
    "UP",
    "W",
]
lint.ignore = [
    "COM812",
    "D212",
    "D417",
    "E501",
    "PLR0911",
    "PLR0912",
    "PLR0913",
]
lint.per-file-ignores."*/tests/*" = [
    "ANN001",
    "B008",
    "D100",
    "D101",
    "D102",
    "D107",
    "NPY",
    "PGH003",
    "PLC0415",
    "PLR0915",
    "PLR2004",
    "PLW0602",
    "PLW0603",
]
lint.per-file-ignores."apps/*" = [ "D" ]
lint.per-file-ignores."docs/*" = [ "D" ]
lint.per-file-ignores."internal.py" = [ "PLC0414" ]
lint.per-file-ignores."pntos-api/*" = [ "PIE" ]
lint.per-file-ignores."pntos-cobra/*" = [ "D" ]
lint.per-file-ignores."postprocessing/*" = [ "D" ]
lint.per-file-ignores."util/*" = [ "D", "F" ]
lint.isort.combine-as-imports = true
lint.pydocstyle.convention = "google"

[tool.pytest.ini_options]
addopts = "-p no:launch_ros -p no:launch_testing"

[tool.coverage.run]
omit = [
    "pntos-api/*",
    # upstream ROS
    "/opt/ros/*",
    # ASPN-ROS
    "*/ros_devel/*",
    # App-running utils
    "pntos-cobra/src/pntos/cobra/utils/apps.py",
]

[tool.mypy]
strict = true
disable_error_code = [ "import-untyped", "no-untyped-call" ]
warn_unreachable = true

[[tool.mypy.overrides]]
module = "pntos.cobra.tutorial_plugins.TutorialPosOrchestrationPlugin"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pntos.cobra.tutorial_plugins.TutorialPosVelOrchestrationPlugin"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pntos.cobra.dummy_plugins.DummyMediator"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pntos.cobra.dummy_plugins.DummyOrchestrationPlugin"
ignore_errors = true

[tool.uv]
package = false

[tool.uv.workspace]
members = [ "pntos-api", "pntos-cobra" ]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
default = true

[tool.uv.sources]
pntos-api = { workspace = true }
pntos-cobra = { workspace = true }
pntos-python-datasets-lcm = { index = "pypi" }
pntos-python-datasets-ros = { index = "pypi" }
