[project]
name = "pntos-python"
version = "0.1.0.dev0"
description = "A meta package for pntOS that contains the components of pntOS."
readme = "README.md"
authors = [ { name = "IS4S", email = "pntos@is4s.com" } ]
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # analysis-scripts main branch - committed 1 May 2026
    "analysis-lcm @ git+https://git@github.com/Open-PNT/analysis-scripts.git@92ee7b01d89a4b06abb07a37c3a990e3933d9ef6#subdirectory=analysis-lcm",
    "analysis-ros @ git+https://git@github.com/Open-PNT/analysis-scripts.git@92ee7b01d89a4b06abb07a37c3a990e3933d9ef6#subdirectory=analysis-ros",
    "matplotlib",
    "pntos-api",
    "pntos-cobra",
    "pntos-python-datasets-lcm==0.1.0",
    "pntos-python-datasets-ros==0.1.0",
]

[dependency-groups]
dev = [
    "gitpython==3.1.44",
    "ipython>=8.24",
    "libclang>=18.1.1",
    "mypy==1.18.2",
    "myst-parser>=4",
    "pip>=24",
    # navigation-data pntos-python-docs branch -- committed 14 May 2026
    "pntos-python-docs-data @ git+https://github.com/Open-PNT/navigation-data.git@20f7be74318f3f29bfdc1ae3f04dee1b6c9714b7",
    "pyproject-fmt>=2.7",
    "pytest>=8.2",
    "pytest-cov>=6",
    "ruff==0.13.2",
    "sphinx>=7.3.7",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.ruff]
format.quote-style = "single"
lint.select = [
    "ANN",
    "B",
    "BLE",
    "C4",
    "COM",
    "D",
    "DTZ",
    "E",
    "F",
    "FA",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "INT",
    "LOG",
    "NPY",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PTH",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLOT",
    "T10",
    "TID",
    "UP",
    "W",
]
lint.ignore = [
    "COM812",
    "D212",
    "D417",
    "E501",
    "PLR0911",
    "PLR0912",
    "PLR0913",
]
lint.per-file-ignores."*/tests/*" = [
    "ANN001",
    "B008",
    "D100",
    "D101",
    "D102",
    "D107",
    "NPY",
    "PGH003",
    "PLC0415",
    "PLR0915",
    "PLR2004",
    "PLW0602",
    "PLW0603",
]
lint.per-file-ignores."apps/*" = [ "D" ]
lint.per-file-ignores."docs/*" = [ "D" ]
lint.per-file-ignores."internal.py" = [ "PLC0414" ]
lint.per-file-ignores."pntos-api/*" = [ "PIE" ]
lint.per-file-ignores."pntos-cobra/*" = [ "D" ]
lint.per-file-ignores."postprocessing/*" = [ "D" ]
lint.per-file-ignores."util/*" = [ "D", "F" ]
lint.isort.combine-as-imports = true
lint.pydocstyle.convention = "google"

[tool.pytest.ini_options]
addopts = "-p no:launch_ros -p no:launch_testing"

[tool.coverage.run]
omit = [
    "pntos-api/*",
    # upstream ROS
    "/opt/ros/*",
    # ASPN-ROS
    "*/ros_devel/*",
    # App-running utils
    "pntos-cobra/src/pntos/cobra/utils/apps.py",
]

[tool.mypy]
strict = true
disable_error_code = [ "import-untyped", "no-untyped-call" ]
warn_unreachable = true

[[tool.mypy.overrides]]
module = "pntos.cobra.tutorial_plugins.TutorialPosOrchestrationPlugin"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pntos.cobra.tutorial_plugins.TutorialPosVelOrchestrationPlugin"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pntos.cobra.dummy_plugins.DummyMediator"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pntos.cobra.dummy_plugins.DummyOrchestrationPlugin"
ignore_errors = true

[tool.uv]
package = false

[tool.uv.workspace]
members = [ "pntos-api", "pntos-cobra" ]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
default = true

[tool.uv.sources]
pntos-api = { workspace = true }
pntos-cobra = { workspace = true }
pntos-python-datasets-lcm = { index = "pypi" }
pntos-python-datasets-ros = { index = "pypi" }
