[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=68", "wheel" ]

[project]
name = "pntos-api"
version = "0.1.0.dev0"
description = "The API specification for pntOS, ported into pure Python."
readme = "README.md"
license = 'Apache-2.0'
license-files = [ 'LICENSE' ]

authors = [ { name = "IS4S", email = "pntos@is4s.com" } ]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # aspn-generated main branch - committed 21 April 2026
    "aspn23",
    "numpy",
]
