[project]
name = "pntos-cli"
version = "0.1.0"
description = "The CLI application for pntOS."
authors = [
    { name = "IS4S", email = "pntos@is4s.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pntos"]
