[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "pntos-cobra"
version = "0.1.0.dev0"
description = "A Python implementation of a set of pntOS example plugins."
readme = "README.md"
authors = [ { name = "IS4S", email = "pntos@is4s.com" } ]
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # analysis-scripts main branch - committed 1 May 2026
    "analysis-lcm @ git+https://git@github.com/Open-PNT/analysis-scripts.git@92ee7b01d89a4b06abb07a37c3a990e3933d9ef6#subdirectory=analysis-lcm",
    "analysis-ros @ git+https://git@github.com/Open-PNT/analysis-scripts.git@92ee7b01d89a4b06abb07a37c3a990e3933d9ef6#subdirectory=analysis-ros",
    # lcm-generated aspn-2.2 branch - committed 10 November 2025
    "aspn2-lcm @ git+ssh://git@git.aspn.us/pntos/lcm-generated.git@831a7727bffab217b3de60491dc12b96b50887a1#subdirectory=python",
    # firehose-outputs main branch - committed 4 May 2026
    "aspn2-translations @ git+ssh://git@git.aspn.us/pntos/firehose-outputs.git@5581f825c6936be56b1822bf0d948ede6a9736cb#subdirectory=aspn2_to_aspn_py_translations",
    # aspn-generated main branch - committed 21 April 2026
    "aspn23 @ git+https://github.com/is4s/aspn-generated.git@7e1f35bc84b90c6d361e690601448f8087e1a626#subdirectory=aspn-py",
    # aspn-generated main branch - committed 21 April 2026
    "aspn23-lcm @ git+https://github.com/is4s/aspn-generated.git@7e1f35bc84b90c6d361e690601448f8087e1a626#subdirectory=lcm/python",
    "h5py>1",
    "lcm>=1.5.1,<2",
    "matplotlib",
    "navtk==2.1.post6.dev0",
    # numpy 2.2 type errors with Cobra (#148).
    "numpy!=2.2",
    "pntos-api==0.1.dev0",
    "scipy>=1.15.2",
    "tqdm",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [ "src/pntos" ]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"

[tool.uv.sources]
navtk = { index = "pypi" }
