[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "pntos-python-docs-data",
    "setuptools>=68",
    "wheel",
]

[project]
name = "pntos-cobra"
version = "2.1.0-0.dev0"
description = "A Python implementation of a set of pntOS example plugins."
readme = "README.md"
license = 'Apache-2.0'
license-files = [ 'LICENSE' ]

authors = [ { name = "IS4S", email = "pntos@is4s.com" } ]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "analysis-lcm>=0.1.3",
    "analysis-ros>=0.1.1",
    "aspn23",
    "aspn23-lcm",
    "flask",
    "flask-socketio",
    "h5py>1",
    "lcm>=1.5.1,<2",
    "matplotlib",
    "navtk==2.1.post6.dev0",
    # numpy 2.2 type errors with Cobra (#148).
    "numpy!=2.2",
    "pntos-api>=2.0.0,<3.0.0",
    "pydantic>=2.0.0",
    "scipy>=1.15.2",
    "tqdm",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
pntos-cobra = [
    "advanced_plugins/ui/_static/dist/**/*",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"

[tool.uv.sources]
navtk = { index = "pypi" }
