[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "pntos-python-docs-data @ git+https://github.com/Open-PNT/navigation-data.git@20f7be74318f3f29bfdc1ae3f04dee1b6c9714b7",
    "setuptools>=68",
    "wheel",
]

[project]
name = "pntos-cobra"
version = "0.1.0.dev0"
description = "A Python implementation of a set of pntOS example plugins."
readme = "README.md"
authors = [ { name = "IS4S", email = "pntos@is4s.com" } ]
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # analysis-scripts main branch - committed 1 May 2026
    "analysis-lcm @ git+https://git@github.com/Open-PNT/analysis-scripts.git@92ee7b01d89a4b06abb07a37c3a990e3933d9ef6#subdirectory=analysis-lcm",
    "analysis-ros @ git+https://git@github.com/Open-PNT/analysis-scripts.git@92ee7b01d89a4b06abb07a37c3a990e3933d9ef6#subdirectory=analysis-ros",
    # aspn-generated main branch - committed 21 April 2026
    "aspn23 @ git+https://github.com/is4s/aspn-generated.git@7e1f35bc84b90c6d361e690601448f8087e1a626#subdirectory=aspn-py",
    # aspn-generated main branch - committed 21 April 2026
    "aspn23-lcm @ git+https://github.com/is4s/aspn-generated.git@7e1f35bc84b90c6d361e690601448f8087e1a626#subdirectory=lcm/python",
    "flask",
    "flask-socketio",
    "h5py>1",
    "lcm>=1.5.1,<2",
    "matplotlib",
    "navtk==2.1.post6.dev0",
    # numpy 2.2 type errors with Cobra (#148).
    "numpy!=2.2",
    "pntos-api==0.1.dev0",
    "pydantic>=2.0.0",
    "scipy>=1.15.2",
    "tqdm",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
pntos-cobra = [
    "advanced_plugins/ui/_static/dist/**/*",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"

[tool.uv.sources]
navtk = { index = "pypi" }
